--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
     transform: rotate(360deg);
   }
 }
-.element-one {
+#element-one {
   width: 100px;
   height: 100px;
   background-color: darkcyan;
@@ -77,15 +77,17 @@
 }
 
 .container {
-  width: 400px;
+  width: 600px;
+  height: 500px;
 }
 
 .shape {
   width: 100px;
   height: 100px;
   float: left;
-  margin: 10px;
+  margin: 20px;
   border-radius: 3px;
+  padding : 20px;
 }
 
 .text {
@@ -106,13 +108,13 @@
     display: table-cell;
     vertical-align: middle;
 }
--webkit-filter: blur(5px);
+
+.blur {
+  -webkit-filter: blur(5px);
   -moz-filter: blur(5px);
   -o-filter: blur(5px);
   -ms-filter: blur(5px);
   filter: blur(5px);
-.blur {
-  
 }
 
 .hidden {
