--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@
 }
 
 .container {
-  width: 600px;
+  width: 700px;
   height: 500px;
 }
 
@@ -85,7 +85,7 @@
   width: 100px;
   height: 100px;
   float: left;
-  margin: 20px;
+  margin: 35px;
   border-radius: 3px;
   padding : 20px;
 }
@@ -123,6 +123,8 @@
 
 .w-95 {
   width: 95px;
+  margin-bottom: 2px;
+  margin-top: 25px;
 }
 
 .w-100 {
